zope.testing Changelog
**********************

3.9.3 (unreleased)
==================

- Fix testrunner-layers-ntd.txt to suppress output to sys.stderr.


3.9.2 (2010-03-15)
==================

- Fixed broken ``from zope.testing.doctest import *``

3.9.1 (2010-03-15)
==================

- No changes; reuploaded to fix broken 3.9.0 release on PyPI.

3.9.0 (2010-03-12)
==================

- Modified the testrunner to use the standard Python doctest module instead of
  the deprecated zope.testing.doctest.

- Fix testrunner-leaks.txt to use the run_internal helper, so that
  sys.exit() isn't triggered during the test run.

- Added support for conditionally using a subunit-based output
  formatter upon request if subunit and testtools are available. Patch
  contributed by Jonathan Lange.


3.8.6 (2009-12-23)
==================

- Added MANIFEST.in and reuploaded to fix broken 3.8.5 release on PyPI.


3.8.5 (2009-12-23)
==================

- Added DocFileSuite, DocTestSuite, debug_src and debug back BBB imports
  back into zope.testing.doctestunit; apparently many packages still import
  them from there!

- Made zope.testing.doctest and zope.testing.doctestunit emit deprecation
  warnings: use the stdlib doctest instead.


3.8.4 (2009-12-18)
==================

- Fixed missing imports and undefined variables reported by pyflakes,
  adding tests to exercise the blind spots.

- Cleaned up unused imports reported by pyflakes.

- Added two new options to generate randomly ordered list of tests and to
  select a specific order of tests.

- RENormalizing checkers can be combined via ``+`` now:
  ``checker1 + checker2`` creates a checker with the transformations of both
  checkers.

- Test fixes for Python 2.7.

3.8.3 (2009-09-21)
==================

- Avoid a split() call or we get test failures when running from a directory
  with spaces in it.

- Fix testrunner behavior on Windows for -j2 (or greater) combined with -v
  (or greater).

3.8.2 (2009-09-15)
==================
